--- a/src/components/header/search/Search.module.scss
+++ b/src/components/header/search/Search.module.scss
@@ -20,17 +20,31 @@
         width: 100%;
         height: 100%;
         padding: 8px 14px 8px 44px;
+        border-radius: 5px;
         font-weight: 400;
         font-size: 16px;
         line-height: 121%;
         outline: 1px solid var(--bg-primary2);
+        background-color: var(--bg-secondary);
+        transition: all 0.3s ease;
 
         &::placeholder {
             color: var(--system-secondary);
+            transition: all 0.3s ease;
+        }
+        &:hover {
+            background-color: darken(#f7f7f7, 3%);
+            &::placeholder {
+                color: darken(#a8a8a8, 10%);
+            }
         }
         &:focus {
             background: var(--bg-secondary);
-            outline: 2px solid var(--bg-primary2);
+            //outline: 2px solid var(--bg-primary2);
+            filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
+            &::placeholder {
+                color: lighten(#a8a8a8, 10%);
+            }
         }
     }
 }
