--- a/src/components/header/search/Search.module.scss
+++ b/src/components/header/search/Search.module.scss
@@ -1,5 +1,6 @@
 .search {
-    width: 542px;
+    //width: 542px;
+    flex-basis: 542px;
     height: 56px;
 
     .search_form {
@@ -33,14 +34,15 @@
             transition: all 0.3s ease;
         }
         &:hover {
-            background-color: darken(#f7f7f7, 3%);
+            //background-color: darken(#f7f7f7, 3%);
+            outline: 2px solid var(--bg-primary2);
             &::placeholder {
                 color: darken(#a8a8a8, 10%);
             }
         }
         &:focus {
-            background: var(--bg-secondary);
-            //outline: 2px solid var(--bg-primary2);
+            background: var(--bg-primary);
+            // outline: 2px solid var(--bg-primary2);
             filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
             &::placeholder {
                 color: lighten(#a8a8a8, 10%);
