--- a/src/components/UI/button/UiButton.module.scss
+++ b/src/components/UI/button/UiButton.module.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 56px;
     background-color: var(--system-primary);
+    cursor: pointer;
 
     &.ui_btn_sidebar {
         margin-top: 120px;
@@ -12,6 +13,8 @@
 }
 
 .ui_btn_link {
+    width: 100%;
+    text-align: center;
     font-family: "Bebas Neue";
     font-weight: 700;
     font-size: 24px;
