--- a/src/index.scss
+++ b/src/index.scss
@@ -32,3 +32,7 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+#root {
+    // position: relative;
+    height: inherit;
+}
