--- a/src/components/main/booksPage/bookCard/BookCard.module.scss
+++ b/src/components/main/booksPage/bookCard/BookCard.module.scss
@@ -1,9 +1,13 @@
 .book_card {
-    // width: 100%;
+    position: relative;
+    z-index: -2;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     gap: 20px;
+    background-color: var(--bg-secondary);
+    border-radius: 6px;
+    overflow: hidden;
 }
 .book_image {
     position: relative;
@@ -30,28 +34,37 @@
 }
 
 .book_details {
-    .title {
-        span {
-            display: -webkit-box;
-            -webkit-line-clamp: 2; // количество строк
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-        }
-    }
+    padding: 15px;
+
     .subtitle {
+        margin: 20px 0 60px;
+
         span {
+            font-size: 15px;
+            line-height: 150%;
             display: -webkit-box;
             -webkit-line-clamp: 1; // количество строк
             -webkit-box-orient: vertical;
             overflow: hidden;
+            color: var(--system-secondary);
         }
     }
     .book_rates {
+        display: flex;
+        justify-content: space-between;
+        font-family: "Bebas Neue";
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 133%;
+
         .price {
             span {
             }
         }
         .isbn {
+            font-size: 16px;
+            font-weight: 400;
+
             span {
             }
         }
