--- a/src/components/main/booksPage/bookCard/BookCard.module.scss
+++ b/src/components/main/booksPage/bookCard/BookCard.module.scss
@@ -3,8 +3,8 @@
     z-index: -2;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    gap: 20px;
+    justify-content: space-between;
+    //gap: 20px;
     background-color: var(--bg-secondary);
     border-radius: 6px;
     overflow: hidden;
@@ -13,7 +13,7 @@
     position: relative;
     width: 100%;
     height: 264px;
-    margin-bottom: auto;
+    //margin-bottom: auto;
 
     &::after {
         content: "";
