--- a/src/components/main/booksPage/bookCard/BookCard.module.scss
+++ b/src/components/main/booksPage/bookCard/BookCard.module.scss
@@ -1,20 +1,22 @@
 .book_card {
     width: 100%;
-    position: relative;
-    z-index: -2;
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
-    //gap: 20px;
     background-color: var(--bg-secondary);
     border-radius: 6px;
     overflow: hidden;
+    cursor: pointer;
+    transition: all 0.3s;
+
+    &:hover {
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
+        transform: translateY(-5px);
+    }
 }
 .book_image {
     position: relative;
-    width: 100%;
     height: 264px;
-    //margin-bottom: auto;
+    z-index: 2;
 
     &::after {
         content: "";
@@ -63,16 +65,9 @@
         font-size: 24px;
         line-height: 133%;
 
-        .price {
-            span {
-            }
-        }
         .isbn {
-            font-size: 16px;
+            font-size: 15px;
             font-weight: 400;
-
-            span {
-            }
         }
     }
 }
