add selectFilter, add media querry for filters

--- a/src/components/UI/title/UiTitle.module.scss
+++ b/src/components/UI/title/UiTitle.module.scss
@@ -6,25 +6,31 @@
     font-weight: 700;
 }
 .text_large {
-    // font-family: "Bebas Neue";
-    // font-weight: 700;
     font-size: 56px;
     line-height: 114%;
     color: var(--system-primary);
 }
 
 .text_medium {
-    // font-family: "Bebas Neue";
-    // font-weight: 700;
     font-size: 40px;
     line-height: 150%;
     color: var(--system-primary);
 }
 
 .text_small {
-    // font-family: "Bebas Neue";
-    // font-weight: 700;
     font-size: 24px;
     line-height: 133%;
     color: var(--system-primary);
+}
+
+@media (max-width: 525px) {
+    .text_large {
+        font-size: 48px;
+    }
+}
+
+@media (max-width: 426px) {
+    .text_large {
+        font-size: 40px;
+    }
 }
