--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,6 @@
 .app_container {
     max-width: 1120px;
-    padding: 0 15px;
+    padding: 80px 15px 0;
     margin: 0 auto;
     height: inherit;
 }
