--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -2,6 +2,12 @@
     // height: 104px;
     // padding: 24px 0px;
     // border-bottom: 1px solid var(--bg-primary2);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: var(--bg-primary);
+    z-index: 1000;
+    max-width: 1090px;
 }
 
 .header_container {
