add semantic tag<section>, delete main container tag

--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -1,6 +1,7 @@
 #main {
     height: inherit;
-}
-.main_container {
     padding: 72px 0px;
 }
+// .main_container {
+//     padding: 72px 0px;
+// }
