--- a/src/components/main/bookPage/bookDetails/BookDetails.module.scss
+++ b/src/components/main/bookPage/bookDetails/BookDetails.module.scss
@@ -18,6 +18,9 @@
 .list_item {
     font-size: 14px;
     line-height: 150%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 
     &:nth-child(odd) {
         color: var(--system-secondary);
@@ -25,7 +28,6 @@
 
     &:nth-child(even) {
         font-size: 15px;
-        text-align: end;
         font-weight: 700;
         color: var(--system-primary);
     }
