--- a/src/components/main/booksPage/BooksPage.module.scss
+++ b/src/components/main/booksPage/BooksPage.module.scss
@@ -10,7 +10,14 @@
     grid-auto-rows: auto;
     gap: 48px 32px;
 }
-
+.books_qty {
+    margin-top: 20px;
+    span {
+        font-size: 16px;
+        line-height: 150%;
+        color: var(--system-secondary);
+    }
+}
 @media (max-width: 992px) {
     .cards_container {
         grid-template-columns: repeat(2, minmax(272px, 1fr));
