--- a/src/components/header/search/Search.module.scss
+++ b/src/components/header/search/Search.module.scss
@@ -25,7 +25,7 @@
         font-size: 16px;
         line-height: 121%;
         outline: 1px solid var(--bg-primary2);
-        background-color: var(--bg-secondary);
+        background-color: var(--bg-primary2);
         transition: all 0.3s ease;
 
         &::placeholder {
