add BackButton component

--- a/src/components/main/bookPage/BookPage.module.scss
+++ b/src/components/main/bookPage/BookPage.module.scss
@@ -2,10 +2,10 @@
     width: 100%;
     padding: 0 0 70px 0;
 }
-.back_btn {
-    padding: 15px 15px 15px 0;
-    background-color: transparent;
-}
+// .back_btn {
+//     padding: 15px 15px 15px 0;
+//     background-color: transparent;
+// }
 .title {
     margin-bottom: 48px;
 }
