preparing for using react-router-dom

--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -61,6 +61,7 @@
         font-weight: 700;
         font-size: 32px;
         line-height: 138%;
+        color: inherit;
 
         &:visited {
             color: inherit;
