--- a/src/components/UI/pagination/Pagination.module.scss
+++ b/src/components/UI/pagination/Pagination.module.scss
@@ -14,6 +14,11 @@
             &:last-child {
                 margin-left: auto !important;
             }
+            &:not(:first-child, :last-child) {
+                button:hover {
+                    background-color: var(--system-secondary) !important;
+                }
+            }
         }
     }
 }
