update pagination style active button

--- a/src/components/UI/pagination/Pagination.module.scss
+++ b/src/components/UI/pagination/Pagination.module.scss
@@ -16,7 +16,7 @@
             }
             &:not(:first-child, :last-child) {
                 button:hover {
-                    background-color: var(--system-secondary) !important;
+                    background-color: var(--bg-primary2) !important;
                 }
             }
         }
