add Routing for BookPage

--- a/src/components/main/booksPage/bookCard/BookCard.module.scss
+++ b/src/components/main/booksPage/bookCard/BookCard.module.scss
@@ -6,6 +6,7 @@
     border-radius: 6px;
     overflow: hidden;
     cursor: pointer;
+    color: inherit;
     transition: all 0.3s;
 
     &:hover {
