--- a/src/components/main/bookPage/bookDetails/BookDetails.module.scss
+++ b/src/components/main/bookPage/bookDetails/BookDetails.module.scss
@@ -10,7 +10,7 @@
 .more_details_list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, auto);
     align-items: start;
     gap: 10px 0;
     margin-top: 30px;
@@ -21,6 +21,10 @@
     height: 100%;
     display: flex;
     align-items: center;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; // количество строк
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 
     &:nth-child(odd) {
         color: var(--system-secondary);
@@ -35,7 +39,7 @@
 
 .more_details {
     position: relative;
-    margin-bottom: 120px;
+    margin: 15px 0 105px 0;
 }
 .more_details_list {
     grid-template-rows: repeat(3, 1fr);
