--- a/src/components/main/bookPage/BookPage.module.scss
+++ b/src/components/main/bookPage/BookPage.module.scss
@@ -1,11 +1,8 @@
 .containter {
+    height: 100vh;
     width: 100%;
     padding: 0 0 70px 0;
 }
-// .back_btn {
-//     padding: 15px 15px 15px 0;
-//     background-color: transparent;
-// }
 .title {
     margin-bottom: 48px;
 }
@@ -16,7 +13,6 @@
 }
 .content_image {
     flex: 0 1 50%;
-    //background-color: var(--additional-orange);
 }
 
 @media (max-width: 994px) {
