--- a/src/components/main/bookPage/bookDetails/BookDetails.module.scss
+++ b/src/components/main/bookPage/bookDetails/BookDetails.module.scss
@@ -28,6 +28,7 @@
 
     &:nth-child(odd) {
         color: var(--system-secondary);
+        text-transform: capitalize;
     }
 
     &:nth-child(even) {
@@ -49,6 +50,10 @@
     right: 0;
     background-color: var(--bg-primary);
     filter: opacity(0.9);
+
+    & .list_item {
+        text-transform: none;
+    }
 }
 .more_details_btn {
     font-size: 13px;
