--- a/src/components/UI/button/UiPrimaryButton.module.scss
+++ b/src/components/UI/button/UiPrimaryButton.module.scss
@@ -10,6 +10,9 @@
     &.ui_btn_sidebar {
         margin-top: 120px;
     }
+    // &.ui_btn_bookDetails {
+    //     margin-bottom: 40px;
+    // }
 }
 
 .ui_btn_link {
