update styles by Search component, delete comments

--- a/src/components/main/bookPage/bookDetails/BookDetails.module.scss
+++ b/src/components/main/bookPage/bookDetails/BookDetails.module.scss
@@ -62,41 +62,6 @@
     align-items: center;
     gap: 5px;
 }
-
-// .preview_container {
-//     position: relative;
-//     text-align: center;
-//     font-weight: 400;
-//     font-size: 14px;
-//     line-height: 150%;
-//     color: var(--system-primary);
-//     margin-top: 40px;
-
-//     .preview_btn {
-//         font-size: 16px;
-//         border-bottom: 1px dotted var(--system-primary);
-//     }
-
-//     .preview_list {
-//         position: absolute;
-//         left: 50%;
-//         transform: translateX(-50%) !important;
-//         text-align: center;
-
-//         .preview_list_item {
-//             padding: 5px 0;
-//             a {
-//                 color: inherit;
-//             }
-//         }
-
-//         .preview_list_item {
-//             a:hover {
-//                 color: var(--system-secondary);
-//             }
-//         }
-//     }
-// }
 .preview_container {
     text-align: center;
     font-weight: 400;
@@ -105,7 +70,7 @@
     color: var(--system-primary);
     margin-top: 40px;
 
-    a {
+    .preview_link {
         color: inherit;
         border-bottom: 1px dotted var(--system-primary);
     }
