--- a/src/components/header/search/Search.module.scss
+++ b/src/components/header/search/Search.module.scss
@@ -13,7 +13,9 @@
         top: 50%;
         right: 14px;
         transform: translateY(-50%);
-        background-color: transparent;
+        //background-color: transparent;
+        background-color: var(--bg-primary2);
+        padding-left: 5px;
     }
 
     .search_input {
@@ -29,6 +31,8 @@
         transition: all 0.3s ease;
 
         &::placeholder {
+            font-size: 14px;
+            letter-spacing: 0.05em;
             color: var(--system-secondary);
             transition: all 0.3s ease;
         }
@@ -43,7 +47,11 @@
             filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
             &::placeholder {
                 color: lighten(#a8a8a8, 10%);
+                //color: white;
             }
+        }
+        &:focus + .search_button {
+            background-color: white;
         }
     }
 }
@@ -64,5 +72,14 @@
 @media (min-width: 768px) {
     .search_main {
         display: none;
+    }
+}
+
+@media (max-width: 440px) {
+    .search {
+        .search_input {
+            font-size: 14px;
+            padding: 8px 14px 8px 20px;
+        }
     }
 }
