--- a/src/components/header/search/Search.module.scss
+++ b/src/components/header/search/Search.module.scss
@@ -13,15 +13,14 @@
         top: 50%;
         right: 14px;
         transform: translateY(-50%);
-        //background-color: transparent;
-        background-color: var(--bg-primary2);
+        background-color: transparent;
         padding-left: 5px;
     }
 
     .search_input {
         width: 100%;
         height: 100%;
-        padding: 8px 14px 8px 44px;
+        padding: 8px 34px 8px 44px;
         border-radius: 5px;
         font-weight: 400;
         font-size: 16px;
@@ -47,11 +46,7 @@
             filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2));
             &::placeholder {
                 color: lighten(#a8a8a8, 10%);
-                //color: white;
             }
-        }
-        &:focus + .search_button {
-            background-color: white;
         }
     }
 }
@@ -75,11 +70,11 @@
     }
 }
 
-@media (max-width: 440px) {
+@media (max-width: 420px) {
     .search {
         .search_input {
             font-size: 14px;
-            padding: 8px 14px 8px 20px;
+            padding: 8px 34px 8px 20px;
         }
     }
 }
