add Tabs component

--- a/src/components/main/bookPage/BookPage.module.scss
+++ b/src/components/main/bookPage/BookPage.module.scss
@@ -1,7 +1,6 @@
-.containter {
-    height: 100vh;
+.section_container {
+    height: 100%;
     width: 100%;
-    padding: 0 0 70px 0;
 }
 .title {
     margin-bottom: 48px;
