--- a/src/components/main/booksPage/BooksPage.module.scss
+++ b/src/components/main/booksPage/BooksPage.module.scss
@@ -2,7 +2,10 @@
     width: 100%;
     padding: 72px 0px;
 }
-
+.section_container {
+    height: 100%;
+    width: 100%;
+}
 .cards_container {
     margin-top: 48px;
     display: grid;
