update styles Tabs

--- a/src/components/main/bookPage/CustomTabs/CustomTabs.scss
+++ b/src/components/main/bookPage/CustomTabs/CustomTabs.scss
@@ -10,10 +10,9 @@
     font-size: 16px;
     line-height: 150% ;
     padding: 0 40px 24px;
-    border: 1px solid transparent;
+    border: none;
     color: var(--system-secondary);
     border-radius: 5px 5px 0 0 ;
-    bottom: -2px;
     transition: all 0.15s;
 
     &--selected {
