--- a/src/components/UI/bookCard/UiBookCard.module.scss
+++ b/src/components/UI/bookCard/UiBookCard.module.scss
@@ -8,6 +8,10 @@
     cursor: pointer;
     color: inherit;
     transition: all 0.3s;
+    
+    // &.book_card__resultsPage {
+    // }
+
 
     &:hover {
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
