add favouriteSlice, work with LocalStorage

--- a/src/components/UI/bookImage/UIBookImage.module.scss
+++ b/src/components/UI/bookImage/UIBookImage.module.scss
@@ -36,3 +36,10 @@
         max-width: 300px;
     }
 }
+@media (max-width: 472px) {
+    .image_large {
+        & img {
+            max-width: 220px;
+        }
+    }
+}
