--- a/src/components/UI/bookCard/UiBookCard.module.scss
+++ b/src/components/UI/bookCard/UiBookCard.module.scss
@@ -8,10 +8,6 @@
     cursor: pointer;
     color: inherit;
     transition: all 0.3s;
-    
-    // &.book_card__resultsPage {
-    // }
-
 
     &:hover {
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
@@ -42,11 +38,13 @@
 }
 
 .book_details {
+    //flex: 0 1 70%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 15px;
+    gap: 20px;
 
     .subtitle {
         margin: 20px 0 40px;
@@ -73,6 +71,19 @@
         .isbn {
             font-size: 15px;
             font-weight: 400;
+        }
+    }
+}
+
+.book_card {
+    &.book_card__favourites {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 20px;
+
+        .book_details {
+            flex: 0 1 70%;
         }
     }
 }
