--- a/src/components/UI/bookImage/UIBookImage.module.scss
+++ b/src/components/UI/bookImage/UIBookImage.module.scss
@@ -1,3 +1,10 @@
+.book_card__favourites {
+    &.book_image {
+        flex: 0 1 30%;
+    }
+}
+
+
 .book_image {
     position: relative;
     height: 100%;
@@ -32,10 +39,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    & img {
-        max-width: 300px;
-    }
+        & img {
+            max-width: 300px;
+        }
 }
+
 @media (max-width: 472px) {
     .image_large {
         & img {
