--- a/src/components/main/favourites/Favourites.module.scss
+++ b/src/components/main/favourites/Favourites.module.scss
@@ -6,10 +6,9 @@
     margin-bottom: 20px;
 }
 
-// .favourites_separator {
-//     width: 100%;
-//     height: 2px;
-//     background-color: gray;
-//     margin: 5px 0;
-
-// }
+.clear_icons {
+    position: absolute;
+    z-index: 10000;
+    top: 10px;
+    right: 10px;
+}
