--- a/src/components/main/favourites/Favourites.module.scss
+++ b/src/components/main/favourites/Favourites.module.scss
@@ -1,3 +1,7 @@
+.section_container {
+    height: 100%;
+}
+
 .favourites_card {
     margin-top: 20px;
 }
@@ -6,9 +10,40 @@
     margin-bottom: 20px;
 }
 
-.clear_icons {
+.clear_icon {
     position: absolute;
     z-index: 10000;
     top: 10px;
     right: 10px;
+    cursor: pointer;
 }
+
+.emptyPage_container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-top: 50px;
+
+    .image_container {
+        width: 130px;
+        height: 130px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        background-color: var(--bg-primary2);
+
+        .image {
+            fill: white;
+            width: 70px;
+            height: 70px;
+        }
+    }
+    .emptyPage_text {
+        font-weight: bolder;
+    }
+}
+
