update Cart component styles

--- a/src/components/UI/bookCard/UiBookCard.module.scss
+++ b/src/components/UI/bookCard/UiBookCard.module.scss
@@ -87,7 +87,8 @@
 }
 
 .card {
-    &.card__favourites {
+    &.card__favourites,
+    &.card__store {
         position: relative;
         display: flex;
         flex-direction: row;
