--- a/src/components/UI/bookCard/UiBookCard.module.scss
+++ b/src/components/UI/bookCard/UiBookCard.module.scss
@@ -10,13 +10,16 @@
     background-color: var(--bg-secondary);
     border-radius: 6px;
     overflow: hidden;
-    cursor: pointer;
     color: inherit;
     transition: all 0.3s;
 
-    &:hover {
+    &:not(.card__store):hover {
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
         transform: translateY(-5px);
+    }
+
+    &.card__store {
+        cursor: default;
     }
 }
 .book_image {
