--- a/src/components/UI/bookCard/UiBookCard.module.scss
+++ b/src/components/UI/bookCard/UiBookCard.module.scss
@@ -11,6 +11,7 @@
     border-radius: 6px;
     overflow: hidden;
     color: inherit;
+    //padding: 20px;
     transition: all 0.3s;
 
     &:not(.card__store):hover {
@@ -96,11 +97,30 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 20px;
+        gap: 40px;
+        padding: 20px;
 
         .book_details {
             flex: 0 1 70%;
+            padding: 0;
         }
+    }
+}
+
+@media (max-width: 510px) {
+    .card {
+        padding: 0;
+
+        &.card__store {
+            flex-direction: column;
+
+            & >* {
+                width: 100%;
+            }
+        }
+    }
+    .book_details {
+        padding: 15px;
     }
 }
 
