--- a/src/components/UI/button/UiPrimaryButton.module.scss
+++ b/src/components/UI/button/UiPrimaryButton.module.scss
@@ -10,13 +10,11 @@
     &.ui_btn_sidebar {
         margin-top: 120px;
     }
-    // &.ui_btn_bookDetails {
-    //     margin-bottom: 40px;
-    // }
 }
 
 .ui_btn {
     width: 100%;
+    height: 100%;
     text-align: center;
     font-family: "Bebas Neue";
     font-weight: 700;
@@ -26,4 +24,16 @@
     color: var(--bg-primary);
     text-transform: uppercase;
     background-color: transparent;
+    transition: all 0.2s;
+
+    &:hover {
+        background-color: var(--system-primary2);
+    }
+    &:active {
+        background-color: var(--system-secondary);
+    }
+
+    &._disabled {
+        cursor: not-allowed;
+    }
 }
