--- a/src/components/UI/button/likeButton/UiLikeButton.module.scss
+++ b/src/components/UI/button/likeButton/UiLikeButton.module.scss
@@ -6,6 +6,10 @@
     width: 56px;
     height: 56px;
     background-color: var(--system-primary);
+
+    &:hover {
+        background-color: var(--system-primary2);
+    }
 }
 
 .heart_btn {
