--- a/src/components/main/favourites/Favourites.module.scss
+++ b/src/components/main/favourites/Favourites.module.scss
@@ -10,11 +10,15 @@
     margin-bottom: 20px;
 }
 
-.clear_icon {
-    position: absolute;
-    z-index: 1000;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-}
+// .clear_icon {
+//     position: absolute;
+//     z-index: 1000;
+//     top: 10px;
+//     right: 10px;
+//     cursor: pointer;
+
+//     &:hover {
+//         background-color: antiquewhite;
+//     }
+// }
 
