--- a/src/components/form/Form.module.scss
+++ b/src/components/form/Form.module.scss
@@ -1,7 +1,32 @@
+.section_container {
+    // &::after {
+    //     content: '';
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     right: 0;
+    //     bottom: 0;
+    //     z-index: 100000;
+    //     display: block;
+    //     background-color: black;
+    //     opacity: 0.5;
+    // }
+}
+
 .form_container {
+    // background-color: white;
+    // position: absolute;
+    // top: 3%;
+    // left: 50%;
+    // z-index: 1000000;
+    // transform: translate(-50%);
+
+
     max-width: 544px;
-    margin: 42px auto 0;
+    //margin: 42px auto 0;
+    margin: 0 auto;
     border: 1px solid var(--bg-primary2);
+
 }
 
 .tabs {
