update styles UiPrimatyButton

--- a/src/components/UI/button/UiPrimaryButton.module.scss
+++ b/src/components/UI/button/UiPrimaryButton.module.scss
@@ -10,6 +10,9 @@
     &.ui_btn_sidebar {
         margin-top: 120px;
     }
+    &.ui_btn_bookDetails {
+        border-radius: 3px;
+    }
 }
 
 .ui_btn {
