--- a/src/components/UI/bookCard/UiBookCard.module.scss
+++ b/src/components/UI/bookCard/UiBookCard.module.scss
@@ -47,10 +47,13 @@
 }
 
 .book_details {
-    height: 100%;
+    //height: 100%;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
+    //justify-content: space-between;
     justify-content: space-between;
+    flex-grow: 1;
     padding: 15px;
     gap: 20px;
 
