--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: var(--system-primary);
+    //background-color: var(--bg-secondary);
     font-weight: 400;
 }
 
