handle SignIn error, update authSlice(add logOut), update routing

--- a/src/components/account/signin/SignIn.module.scss
+++ b/src/components/account/signin/SignIn.module.scss
@@ -6,3 +6,8 @@
 .form > *:last-child {
     margin-top: 40px;
 }
+.signIn_error {
+    color: rgb(238, 30, 30);
+    text-align: center;
+    margin-top: 10px;
+}
