--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -66,6 +66,9 @@
         &:visited {
             color: inherit;
         }
+        &::after {
+            display: none;
+        }
     }
 }
 
