clean code in components

--- a/src/components/UI/button/likeButton/UiLikeButton.module.scss
+++ b/src/components/UI/button/likeButton/UiLikeButton.module.scss
@@ -23,9 +23,9 @@
 
 .heart_active {
     path {
-        stroke: red;
+        stroke: var(--contextual-color);
     }
-    fill: red;  
+    fill: var(--contextual-color);  
 }
 
 @media (max-width: 472px) {
