--- a/src/components/main/bookPage/BookTabs/BookTabs.module.scss
+++ b/src/components/main/bookPage/BookTabs/BookTabs.module.scss
@@ -1,56 +1,54 @@
-.react-tabs {
+.tabs {
     margin-top: 72px;
 }
-
-.react-tabs__tab-list {
-    margin-bottom: 48px;
+.tab_list {
+    margin-bottom: 28px;
+    display: flex;
+    border-bottom: 1px solid var(--system-primary2);
+    border-radius: 10px 10px 0 0 ;
 }
-
-.react-tabs__tab {
+.tab_item {
     font-size: 16px;
     line-height: 150% ;
-    padding: 0 40px 24px;
+    padding: 0 30px 14px;
     border: none;
     color: var(--system-secondary);
     border-radius: 5px 5px 0 0 ;
-    transition: all 0.15s;
+    cursor: pointer;
 
-    &--selected {
+    &.tab_item--selected {
         color: var(--system-primary);
         border-bottom: 2px solid var(--system-primary);
     }
-
     &:focus {
         &:after {
           background: transparent;
         }
-      }
-    
+    }
     &:hover {
         background-color: var(--bg-primary2);
     }
+}
+.tab_panel {
+    display: none;
 
-    &-panel {
-        display: none;
-
-        &--selected {
-          display: block;
-          padding: 10px;
-          font-size: 16px;
-          line-height: 200%;
-          color: var(--system-primary);
-        }
-      }
+    &.tab_panel--selected{
+      display: block;
+      padding: 10px;
+      font-size: 16px;
+      line-height: 200%;
+      color: var(--system-primary);
+    }
 }
 
 @media (max-width: 504px) {
-    .react-tabs {
+    .tabs {
         margin-top: 52px;
     }
-    .react-tabs__tab-list {
+    .tab-list {
        text-align: center;
     }
-    .react-tabs__tab {
+    .tab_item {
         padding: 10px 20px 5px;
     }
 }
