clean code (delete unused dependencies and comments)

--- a/src/components/account/form/Form.module.scss
+++ b/src/components/account/form/Form.module.scss
@@ -1,7 +1,7 @@
 .form_container {
     // background-color: white;
     // position: absolute;
-    // top: 6%;
+    // top: -100px;
     // left: 50%;
     // z-index: 1000000;
     // transform: translate(-50%);
