--- a/src/components/account/form/Form.module.scss
+++ b/src/components/account/form/Form.module.scss
@@ -8,10 +8,10 @@
     position: relative;
 
     max-width: 544px;
-    //margin: 42px auto 0;
     margin: 0 auto;
     border-radius: 3px;
     border: 1px solid var(--bg-primary2);
+    box-shadow: 0px 0px 10px var(--system-secondary);
 
 }
 
